# qt-creator-menubartoggle-plugin

./: .gitignore  CMakeLists.txt  MenuBarToggle.json.in  README.md
src/: menubartoggle_constants.h  menubartoggle_plugin.cpp  menubartoggle_plugin.h
